// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v1;

option java_outer_classname = "ExperimentalFeaturesOuterClass";
option java_package = "com.daml.ledger.api.v1";
option csharp_namespace = "Com.Daml.Ledger.Api.V1";

/*
 IMPORTANT: in contrast to other parts of the Ledger API, only json-wire backwards
            compatibility guarantees are given for the messages in this file.
*/

// See the feature message definitions for descriptions.
message ExperimentalFeatures {
  ExperimentalSelfServiceErrorCodes self_service_error_codes = 1 [deprecated = true];
  ExperimentalStaticTime static_time = 2;
  CommandDeduplicationFeatures command_deduplication = 3;
  ExperimentalOptionalLedgerId optional_ledger_id = 4;
  ExperimentalContractIds contract_ids = 5;
  ExperimentalCommitterEventLog committer_event_log = 6;
  ExperimentalExplicitDisclosure explicit_disclosure = 7;
  ExperimentalUserAndPartyLocalMetadataExtensions user_and_party_local_metadata_extensions = 8;
  AcsActiveAtOffsetFeature acs_active_at_offset = 9;
  TransactionsWithTemplateFilters template_filters = 10;
  ExperimentalCommandInspectionService command_inspection_service = 11;
}

// GRPC self-service error codes are returned by the Ledger API.
message ExperimentalSelfServiceErrorCodes {
  option deprecated = true;
}

// Ledger is in the static time mode and exposes a time service.
message ExperimentalStaticTime {
  bool supported = 1;
}

// Feature descriptors for command deduplication intended to be used for adapting Ledger API tests.
message CommandDeduplicationFeatures {
  CommandDeduplicationPeriodSupport deduplication_period_support = 1;
  CommandDeduplicationType deduplication_type = 2;
  // The ledger will reject any requests which specify a deduplication period which exceeds the specified max deduplication duration.
  // This is also enforced for ledgers that convert deduplication periods specified as offsets to durations.
  bool max_deduplication_duration_enforced = 3;
}

// Ledger API does not require ledgerId to be set in the requests.
message ExperimentalOptionalLedgerId {
}

// Feature descriptor specifying how deduplication periods can be specified and how they are handled by the participant
// node.
message CommandDeduplicationPeriodSupport {
  // How the participant node supports deduplication periods specified using offsets.
  enum OffsetSupport {
    OFFSET_NOT_SUPPORTED = 0;
    OFFSET_NATIVE_SUPPORT = 1;
    OFFSET_CONVERT_TO_DURATION = 2;
  }
  // How the participant node supports deduplication periods specified as durations.
  enum DurationSupport {
    DURATION_NATIVE_SUPPORT = 0;
    DURATION_CONVERT_TO_OFFSET = 1;
  }
  OffsetSupport offset_support = 1;
  DurationSupport duration_support = 2;
}

// How the participant node reports duplicate command submissions.
enum CommandDeduplicationType {
  // Duplicate commands are exclusively reported asynchronously via completions.
  ASYNC_ONLY = 0;
  // Commands that are duplicates of concurrently submitted commands are reported synchronously via a gRPC error on the
  // command submission, while all other duplicate commands are reported asynchronously via completions.
  ASYNC_AND_CONCURRENT_SYNC = 1;
}

// See `daml-lf/spec/contract-id.rst` for more information on contract ID formats.
message ExperimentalContractIds {
  ContractIdV1Support v1 = 1;

  enum ContractIdV1Support {
    // Contract IDs must be suffixed.
    // Distributed ledger implementations must reject non-suffixed contract IDs.
    SUFFIXED = 0;
    // Contract IDs do not need to be suffixed.
    // This can be useful for shorter contract IDs in centralized committer implementations.
    // Suffixed contract IDs must also be supported.
    NON_SUFFIXED = 1;
  }
}

// How the committer stores events.
message ExperimentalCommitterEventLog {

  CommitterEventLogType event_log_type = 1;

  enum CommitterEventLogType {
    // Default. There is a single log.
    CENTRALIZED = 0;
    // There is more than one event log. Usually, when the committer itself is distributed.
    // Or there are per-participant event logs.
    // It may result in transaction IDs being different for the same transaction across participants, for example.
    DISTRIBUTED = 1;
  }
}

// Enables the use of explicitly disclosed contracts for command submission
message ExperimentalExplicitDisclosure {
  bool supported = 1;
}

// Whether the Ledger API supports:
// - is_deactivated user property,
// - metadata with annotations and resource version for users and parties,
// - update calls for users and parties.
message ExperimentalUserAndPartyLocalMetadataExtensions {
  bool supported = 1;
}

// Whether the Ledger API supports requesting ACS at an offset
message AcsActiveAtOffsetFeature {
  bool supported = 1;
}

// Whether the Ledger API supports querying for transaction streams using template filters
message TransactionsWithTemplateFilters {
  bool supported = 1;
}

// Whether the Ledger API supports command inspection service
message ExperimentalCommandInspectionService {
  bool supported = 1;
}
